# yast-irda

./: .gitignore  yast2-irda.spec.in
doc/autodocs/: Makefile.am
irda/: .cvsignore  RPMNAME  yast2-irda.spec.in
irda/agents/: Makefile.am  cfg_irda.scr
irda/doc/: Makefile.am  irda.html
irda/package/: yast2-irda.changes
irda/src/: Irda.ycp  Makefile.am  irda.desktop  irda.ycp
irda/testsuite/: .cvsignore
irda/testsuite/tests/: Write.ycp
package/: yast2-irda.changes  yast2-irda.spec
src/: Irda.ycp  Makefile.am  irda.desktop  irda.ycp  ui.ycp
src/clients/: irda.rb  irda.ycp
src/desktop/: irda.desktop
src/include/irda/: ui.rb  ui.ycp
src/modules/: Irda.rb
testsuite/tests/: Read.out  Read.rb  Read.ycp  Write.out  Write.rb  Write.ycp
