# Sources for irda

module_DATA = \
  modules/Irda.rb

client_DATA = \
  clients/irda.rb

yncludedir = @yncludedir@/irda
ynclude_DATA = \
  include/irda/ui.rb

scrconf_DATA = \
  scrconf/cfg_irda.scr

desktop_DATA = \
  desktop/irda.desktop

EXTRA_DIST = $(module_DATA) $(client_DATA) $(ynclude_DATA) $(scrconf_DATA) $(desktop_DATA)

include $(top_srcdir)/Makefile.am.common